# AntiSocial

./: .gitignore  AntiSocial.geany  Makefile
TestProject/: Makefile
TestProject/src/: main.cpp
antisocial/: CMakeLists.txt
antisocial/TestProject/: CMakeLists.txt
antisocial/TestProject/src/: main.cpp
antisocial/include/: AntiSocial.h  AntisocialDLL.h  Batch.h  Camera.h  Cursor.h  Drawable.h  Input.h  Material.h  Matrix4.h  Mesh.h  MeshRenderer.h  Model.h  Monitor.h  Node.h  Scene.h  Shader.h  Skybox.h  Texture2D.h  Transform.h  Vector2.h  Vector3.h  Vector4.h  VertexArray.h  Window.h  matrix4.h  vector2.h  vector3.h  vector4.h
antisocial/shaders/: lightObj.frag  lightObj.vert  shader.frag  shader.vert
antisocial/src/: Camera.cpp  Drawable.cpp  Input.cpp  Material.cpp  Matrix4.cpp  Mesh.cpp  Shader.cpp  Skybox.cpp  Texture2D.cpp  Vector2.cpp  Vector3.cpp  Vector4.cpp  Window.cpp  matrix4.cpp  vector2.cpp  vector3.cpp  vector4.cpp
shaders/: shader.frag
src/: Window.cpp  Window.h  vector4.h
